--- a/gradle/sfdc/build.properties
+++ b/gradle/sfdc/build.properties
@@ -5,12 +5,12 @@ sfdc.maxPoll = 20
 # Specify the login credentials for the desired Salesforce organization
 # Use 'https://login.salesforce.com' for production or developer edition (the default if not specified).
 # Use 'https://test.salesforce.com for sandbox.
-sfdc.source.username = ahuanca@pros.com.cpq
-sfdc.source.password = Adri@n12!rUOtsVTebuh3D0NlrxslHm8N
+sfdc.source.username = <Insert your Salesforce username here>
+sfdc.source.password = <Insert your Salesforce password here + security token> 
 sfdc.source.serverurl = https://login.salesforce.com
 
-sfdc.target.username = ahuanca@changesettest.com
-sfdc.target.password = Adri@n1!H3oCWjw7BuhLYiJKSXmcEXtki
+sfdc.target.username = <Insert your Salesforce username here>
+sfdc.target.password = <Insert your Salesforce password here + security token> 
 sfdc.target.serverurl = https://login.salesforce.com
 
 sfdc.folder.migration = output/migration
