--- a/gradle/sfdc/build.properties
+++ b/gradle/sfdc/build.properties
@@ -17,5 +17,8 @@ sfdc.folder.migration = output/migration
 sfdc.folder.remove = config/remove
 sfdc.file.unpackaged = config/unpackaged/package.xml
 
+sfdc.folder.source = output/source
+sfdc.folder.target = output/target
+
 # If your network requires an HTTP proxy, see http://ant.apache.org/manual/proxy.html for configuration.
 #
